@@ -550,16 +550,20 @@ check_nocase_linkname(char *dirname, char *linkname)
 	struct dirent 	*dp;
 	int		namelength = strlen(linkname);
 
-	if ((dir = opendir(dirname)) == NULL)
+	if ((dir = opendir(dirname)) == NULL) {
+		d_log("check_nocase_linkname: failed to open %s\n", dirname);
 		return linkname;
+	}
 	while ((dp = readdir(dir))) {
 		if ((int)strlen(dp->d_name) == namelength && !strcasecmp(dp->d_name, linkname)) {
+			d_log("check_nocase_linkname: found matching groupname \"%s\" == \"%s\"\n", dp->d_name, linkname);
 			linkname = ng_realloc(linkname, (int)sizeof(dp->d_name) + 1, 1, 1, NULL, 1);
 			strncpy(linkname, dp->d_name, sizeof(dp->d_name));
 			break;
 		}
 	}
 	closedir(dir);
+	d_log("check_nocase_linkname: returning groupname \"%s\"\n", linkname);
 	return linkname;
 }
 
