@@ -11,6 +11,7 @@ v1.1.0a --> 1.1.x :
                 - removed racersplit & racersmsg from conf. (it's been deprecated for a while)
                 - added racersplit_postfix.
                 - %T/%t now users racersplit* too.
+		- fixed a bug re: sort_by_group - case should now no longer matter
 
 v1.1.0 --> 1.1.0a : (r2414)
 		- stats in announces were broken in v1.1.0, ``hotfix''.
